fix iframe and other layout issues

--- a/theme/css/default.css
+++ b/theme/css/default.css
@@ -301,7 +301,7 @@ slides > slide.dark {
 /* line 135, ../scss/default.scss */
 slides > slide:not(.nobackground):before {
   font-size: 12pt;
-  content: "Bla";
+  content: "CSCI 202 - Web Development II";
   position: absolute;
   bottom: 20px;
   left: 60px;
@@ -310,9 +310,9 @@ slides > slide:not(.nobackground):before {
   -moz-background-size: 49px 30px;
   -o-background-size: 49px 30px;
   background-size: 49px 30px;
-  padding-left: 40px;
+  padding-left: 55px;
   height: 30px;
-  width: 49px;
+  width: 300px;
   line-height: 1.9;
 }
 /* line 147, ../scss/default.scss */
@@ -348,6 +348,7 @@ slides > slide.backdrop {
 slides > slide.backdrop:after, slides > slide.backdrop:before {
   display: none;
 }
+
 /* line 180, ../scss/default.scss */
 slides > slide > hgroup + article {
   margin-top: 45px;
@@ -366,7 +367,7 @@ slides > slide > article:only-child {
 }
 /* line 197, ../scss/default.scss */
 slides > slide > article:only-child > iframe {
-  height: 98%;
+  height: 97%;
 }
 
 /* line 203, ../scss/default.scss */
@@ -570,7 +571,7 @@ code {
 /* line 374, ../scss/default.scss */
 iframe {
   width: 100%;
-  height: 530px;
+  height: 510px;
   background: white;
   border: 1px solid #e6e6e6;
   -webkit-box-sizing: border-box;
